--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,8 @@ jobs:
             curl --user ${CIRCLE_TOKEN}: \
             --data '{"branch":"test-api","parameters":{"run_test":true}}'
             --data build_parameters[CIRCLE_JOB]=deploy_docker \
-            
-            https://circleci.com/api/v1.1/project/github/HennaAbbas/Test_repo/pipeline
+            --url https://circleci.com/api/v2/project/github/HennaAbbas/Test_repo/pipeline
+         
         
 workflows:
   build-app:
