--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,7 @@ jobs:
           name: Set checkout bit to true
           command: |
             curl --user ${CIRCLE_TOKEN}: \
-            --data '{"branch":"test-api","parameters":{"run_test":true}}'
-            --data build_parameters[CIRCLE_JOB]=deploy_docker \
+            --data '{"branch":"test-api","parameters":{"run_test":true}}'\
             --url https://circleci.com/api/v2/project/github/HennaAbbas/Test_repo/pipeline
          
         
