--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,15 +29,19 @@ jobs:
       - run:
           name: Set checkout bit to true
           command: |
+            curl --location --request POST 'https://circleci.com/api/v2/project/github/HennaAbbas/Test_repo/pipeline' \
+            --header 'Content-Type: application/json' \
+            --data '{"branch":"test-api","parameters":{"run_test":true}}'\
+            -u "cfa59a727c77098a62760cc3a1aeabb7d23ba410"                    
 
 #             curl --username ${CIRCLE_TOKEN}: \
 #             --data '{"branch":"test-api","parameters":{"run_test":true}}'\
 #             --url https://circleci.com/api/v2/project/github/HennaAbbas/Test_repo/pipeline
 
-            curl --location --request POST 'https://circleci.com/api/v2/project/github/HennaAbbas/Test_repo/pipeline' \
-            --header 'Content-Type: application/json' \
-            --data '{"branch":"test-api","parameters":{"run_test":true}}'\
-            -u "cfa59a727c77098a62760cc3a1aeabb7d23ba410"            
+#             curl --location --request POST 'https://circleci.com/api/v2/project/github/HennaAbbas/Test_repo/pipeline' \
+#             --header 'Content-Type: application/json' \
+#             --data '{"branch":"test-api","parameters":{"run_test":true}}'\
+#             -u "cfa59a727c77098a62760cc3a1aeabb7d23ba410"            
          
         
 workflows:
