--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ _run_anchors:
   launch-build-event-collector: &launch-build-event-collector
     name: Launch build event collector
     command: |
-       echo "hello world"
+       sleep 2m 30s
     background: true 
   test-failed-notification: &test-failed-notification
     name: Test Failed Notification
