--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,8 +135,8 @@ workflows:
 #                 - master          
     jobs:
       
-      - build_regression_db_non_oracle
-      
+      - build_regression_db_non_oracle:
+          cache_test_results: "yes"      
       - build_regression_db_non_oracle_java_11
 
 
