--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,7 +136,8 @@ workflows:
     jobs:
       
       - build_regression_db_non_oracle:
-          cache_test_results: "yes"      
+          name: "diff_job"
+          cache_test_results: "no"      
       - build_regression_db_non_oracle_java_11
 
 
