--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,6 +106,7 @@ workflows:
           requires:
             - install-and-test 
       - build_regression_db_non_oracle:
+          name: build job
           cache_test_results: "yes"
       - build_regression_db_non_oracle_java_11
       
@@ -119,6 +120,7 @@ workflows:
           requires:
             - install-and-test 
       - build_regression_db_non_oracle:
+          name: build job      
           cache_test_results: "yes"
           <<: *ignore_intermediate_branches_and_master          
       - build_regression_db_non_oracle_java_11
@@ -136,8 +138,8 @@ workflows:
     jobs:
       
       - build_regression_db_non_oracle:
-          name: "diff_job"
-          cache_test_results: "no"      
+          name: build job
+      
       - build_regression_db_non_oracle_java_11
 
 
